--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -110,9 +110,11 @@ input[type=email] {
     right: 35%;
     top: 8%;
     margin: 20px;
-    max-width: 340px;
+    max-width: 360px;
     padding: 10px;
-    background-color: white;
+    background-image: url("../images/back2.jpg");
+    color: white;
+    border-radius: 50px 20px;
 }
 @media only screen and (max-width: 700px){
     .conte{
@@ -128,14 +130,18 @@ input[type=email] {
     height: 15px;
     background-color: #003d99;
 }
+nav{
+  background-image: url("../images/back3.jpg");
+}
 footer{
+background-image: url("../images/back3.jpg");
 padding: 10px 0;
-background-color: #101010;
 color:#9d9d9d;
 bottom: 0;
 width: 100%;
  position: fixed; 
 }
+
     .clickable{
         cursor: pointer;   
     }
@@ -225,7 +231,7 @@ width: 100%;
           box-shadow: 0 6px 6px -6px #0E1119;
 }
 
-.container td:hover {
+.container td:hover{
   background-color: #FFF842;
   color: #403E10;
   font-weight: bold;
