--- a/views/ques1.ejs
+++ b/views/ques1.ejs
@@ -6,9 +6,10 @@
     document.getElementById("myBar").style.width =score+'%'; 
 </script>
     <div class="conte enter-stage">
-      <h3>Which bollywood movie has highest Imdb rating till date?</h3>
-      <button  class="button" ng-click="wrong()">DANGAL</button><hr>
+      <h3>Which bollywood movie has highest Imdb rating till date?</h3><hr>
+      <button type="submit" class="button" ng-click="wrong()">DANGAL</button><hr>
       <button type="submit" class="button" ng-click="wrong()">3 IDIOTS</button><hr>
       <button type="submit" class="button" ng-click="right()">SANJU</button><hr>
       <button type="submit" class="button" ng-click="wrong()">VIKARAM VEDHA</button>
+      <hr>
     </div>
