--- a/views/ques10.ejs
+++ b/views/ques10.ejs
@@ -6,7 +6,7 @@
     document.getElementById("myBar").style.width =score+'%'; 
 </script>
 <div class="conte enter-stage">
-      <h3>Which bollywood singer has a record of being most recorded artist in music history ?</h3>
+      <h3>Which bollywood singer has a record of being most recorded artist in music history ?</h3><hr>
       <button type="submit" class="button" ng-click="wrong()" >Mohammed Rafi</button><hr>
       <button type="submit" class="button" ng-click="wrong()" >Arijit Singh</button><hr>
       <button type="submit" class="button" ng-click="wrong()" >Lata Mangeshkar</button><hr>
