--- a/views/ques2.ejs
+++ b/views/ques2.ejs
@@ -6,9 +6,9 @@
     document.getElementById("myBar").style.width =score+'%'; 
 </script>
  <div class="conte enter-stage">
-      <h3>What is Shah Rukh's mantra to woo a girl in Kal Ho Naa Ho?</h3>
+      <h3>What is Shah Rukh's mantra to woo a girl in Kal Ho Naa Ho?</h3><hr>      
       <button type="submit" class="button" ng-click="wrong()">Saat din ladki in </button><hr>
       <button type="submit" class="button" ng-click="wrong()">Ek din ladki in </button><hr>
       <button type="submit" class="button" ng-click="right()">Che din ladki in </button><hr>
-      <button type="submit" class="button" ng-click="wrong()">Do din ladki in </button>
+      <button type="submit" class="button" ng-click="wrong()">Do din ladki in </button><hr>
     </div>
