--- a/views/ques3.ejs
+++ b/views/ques3.ejs
@@ -6,9 +6,9 @@
     document.getElementById("myBar").style.width =score+'%'; 
 </script>
 <div class="conte enter-stage">
-      <h3>Nominated in the Best Foreign film catergory at the Oscars, Lagaan lost to...?</h3>
+      <h3>Nominated in the Best Foreign film catergory at the Oscars, Lagaan lost to...?</h3><hr>
       <button type="submit" class="button" ng-click="wrong()">Son Of The Bride</button><hr>
       <button type="submit" class="button"  ng-click="right()">No Man's Land</button><hr>
       <button type="submit" class="button"  ng-click="wrong()">Amelie</button><hr>
-      <button type="submit" class="button"  ng-click="wrong()">The Lord of the Rings</button>
+      <button type="submit" class="button"  ng-click="wrong()">The Lord of the Rings</button><hr>
     </div>
