--- a/views/ques5.ejs
+++ b/views/ques5.ejs
@@ -6,9 +6,9 @@
     document.getElementById("myBar").style.width =score+'%'; 
 </script>
 <div class="conte enter-stage">
-      <h3>Which bollywood movie has highest number of awards for a movie ?</h3>
+      <h3>Which bollywood movie has highest number of awards for a movie ?</h3><hr>
       <button type="submit" class="button" ng-click="right()" >Kaho Naa..Pyar Hai</button><hr>
       <button type="submit" class="button" ng-click="wrong()" >Dilwale Dulhania Le Jayenge</button><hr>
       <button type="submit" class="button" ng-click="wrong()" >3 Idiots</button><hr>
-      <button type="submit" class="button" ng-click="wrong()" >Kuch Kuch Hota Hai</button>
+      <button type="submit" class="button" ng-click="wrong()" >Kuch Kuch Hota Hai</button><hr>
     </div>
