--- a/views/ques6.ejs
+++ b/views/ques6.ejs
@@ -6,9 +6,9 @@
     document.getElementById("myBar").style.width =score+'%'; 
 </script>
 <div class="conte enter-stage">
-      <h3>Which one of the mentioned movies is highest-grossing India film ?</h3>
+      <h3>Which one of the mentioned movies is highest-grossing India film ?</h3><hr>
       <button type="submit" class="button" ng-click="right()" >PK</button><hr>
       <button type="submit" class="button" ng-click="wrong()" >Baahubali 2: The Conclusion</button><hr>
       <button type="submit" class="button" ng-click="wrong()" >SULTAN</button><hr>
-      <button type="submit" class="button" ng-click="wrong()" >DANGAL</button>
+      <button type="submit" class="button" ng-click="wrong()" >DANGAL</button><hr>
     </div>
