--- a/views/ques7.ejs
+++ b/views/ques7.ejs
@@ -6,9 +6,9 @@
     document.getElementById("myBar").style.width =score+'%'; 
 </script>
 <div class="conte enter-stage">
-      <h3>Which bollywood singer has a record of recording maximum 28 songs in a day ?</h3>
+      <h3>Which bollywood singer has a record of recording maximum 28 songs in a day ?</h3><hr>
       <button type="submit" class="button" ng-click="wrong()" >Asha Bhosle</button><hr>
       <button type="submit" class="button" ng-click="right()" >Kumar Sanu</button><hr>
       <button type="submit" class="button" ng-click="wrong()" >Arijit Singh</button><hr>
-      <button type="submit" class="button" ng-click="wrong()" >Lata Mangeshkar</button>
+      <button type="submit" class="button" ng-click="wrong()" >Lata Mangeshkar</button><hr>
     </div>
