--- a/views/ques8.ejs
+++ b/views/ques8.ejs
@@ -6,9 +6,9 @@
     document.getElementById("myBar").style.width =score+'%'; 
 </script>
 <div class="conte enter-stage">
-      <h3>Which bollywood actor or actress has appeared in the most movies?</h3>
+      <h3>Which bollywood actor or actress has appeared in the most movies?</h3><hr>
       <button type="submit" class="button" ng-click="wrong()" >Anupam Kher</button><hr>
       <button type="submit" class="button" ng-click="wrong()" >Lalita Pawar</button><hr>
       <button type="submit" class="button" ng-click="right()" >Shakti Kapoor</button><hr>
-      <button type="submit" class="button" ng-click="wrong()" >Kader Khan</button>
+      <button type="submit" class="button" ng-click="wrong()" >Kader Khan</button><hr>
     </div>
