--- a/views/ques4.ejs
+++ b/views/ques4.ejs
@@ -6,9 +6,9 @@
     document.getElementById("myBar").style.width =score+'%'; 
 </script>
 <div class="conte enter-stage">
-      <h3>Who is the first Indian to win an Academy Award (Oscar) ?</h3>
+      <h3>Who is the first Indian to win an Academy Award (Oscar) ?</h3><hr>
       <button type="submit" class="button" ng-click="wrong()" >Satyajit Ray</button><hr>
       <button type="submit" class="button" ng-click="right()">Bhanu Athaiya</button><hr>
       <button type="submit" class="button" ng-click="wrong()">Mehboob Khan</button><hr>
-      <button type="submit" class="button" ng-click="wrong()">A.R. Rahman</button>
+      <button type="submit" class="button" ng-click="wrong()">A.R. Rahman</button><hr>
     </div>
