--- a/views/ques9.ejs
+++ b/views/ques9.ejs
@@ -6,7 +6,7 @@
     document.getElementById("myBar").style.width =score+'%'; 
 </script>
 <div class="conte enter-stage">
-      <h3>Which bollywood movie has maximum number of songs ?</h3>
+      <h3>Which bollywood movie has maximum number of songs ?</h3><hr>
       <button type="submit" class="button" ng-click="wrong()" >TAAL</button><hr>
       <button type="submit" class="button" ng-click="wrong()" >ROCKSTAR</button><hr>
       <button type="submit" class="button" ng-click="wrong()" >SALAAM BOMBAY!</button><hr>
