--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,8 +37,8 @@
 	<div class="ng-view"></div>
 </div>
 <footer>
-            <p align="center"> Copyright © Bollywood Quiz. All Rights
-                Reserved </p>
+            <p align="center"> Copyright © Bollywood Quiz.All Rights
+                Reserved by the Company <br> </p>
     </footer>
 </body>
 </html>
